namespace Students.Models;

public class Teacher : Person
{
    public string Department { get; set; }
}